# lapack-visualstudio-mingw-gfortran

./: .gitignore  CMakeLists.txt  README.md
config/: CMakeAddFortranSubdirectory.cmake  print_target_properties.cmake
config/CMakeAddFortranSubdirectory/: config_cafs_proj.cmake.in
src/: test.c
